--- a/styles/hd.css
+++ b/styles/hd.css
@@ -54,8 +54,17 @@
     width: 1000px;
   }
 
+  #welcome-slider::after {
+    background: linear-gradient(90deg, var(--bg-dark) 0%, var(--bg-dark50) 16%, #00000000 31%);
+  }
+
   .slider-view {
     height: 750px;
     width: 5000px;
+  }
+
+  .slider-navigation {
+    width: 600px;
+    height: 120px;
   }
 }
