--- a/styles/base.css
+++ b/styles/base.css
@@ -174,7 +174,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 40px;
+  gap: 56px;
   position: absolute;
   z-index: 1;
   bottom: 0;
@@ -194,8 +194,8 @@ footer {
 
 .thumbs span {
   display: inline-block;
-  width: 19px;
-  height: 19px;
+  width: 16px;
+  height: 16px;
   background: var(--white);
   margin: 0 4px;
   cursor: pointer;
@@ -217,14 +217,19 @@ footer {
 .arrows button {
   background: none;
   border: none;
-  padding: 4px 12px;
-  font-size: 18px;
   cursor: pointer;
+}
+
+.arrows button svg {
+  width: 30px;
+  height: 8px;
 }
 
 .slider-navigation .arrows {
   display: flex;
-  gap: 18px;
+  justify-content: space-between;
+  height: 8px;
+  width: 80px;
 }
 
 .arrows button svg path {
