--- a/styles/base.css
+++ b/styles/base.css
@@ -15,6 +15,7 @@
   --bg-dark50: #03030380;
   --dark-red: #710707;
   --font-gold: #9D8665;
+  --text-gold: #CAAA7D;
   --font-gold-dimmed: #7E6C51;
   --golden: #D2B183;
   --gray: #666666;
@@ -338,6 +339,45 @@ h3.out::after {
   animation: stratching-out 0.5s ease forwards;
 }
 
+#explore .picture {
+  position: relative;
+}
+
+#explore .picture .ace {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+}
+
+#explore .picture .ace #sliding {
+  width: 62%;
+  overflow: hidden;
+  position: relative;
+  transition: width 0.5s ease;
+  pointer-events: none; /* Prevent blocking mouse events */
+}
+
+#explore .picture .ace #sliding::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url('./../assets/images/explore/las-meninas.png');
+  background-position: center;
+  background-size: cover;
+  height: 100%;
+  width: 720px;
+  filter: hue-rotate(15deg) contrast(1.1) brightness(2) saturate(1.5);
+  -webkit-filter: hue-rotate(15deg) contrast(1.1) brightness(2) saturate(1.5);
+}
+
+#explore .picture .ace .slide {
+  margin-inline: -19px;
+  z-index: 1;
+}
+
 footer {
   position: relative;
   font-size: 22px;
@@ -424,4 +464,8 @@ footer .bottom {
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border: 0;
+}
+
+.text-gold {
+  color: var(--text-gold);
 }
