--- a/styles/base.css
+++ b/styles/base.css
@@ -66,8 +66,7 @@ header nav ul {
 
 header,
 main,
-footer,
-section {
+footer {
   width: 100%;
 }
 
@@ -76,6 +75,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Forum", serif;
   font-weight: 400;
   text-transform: uppercase;
+}
+
+p {
+  margin: 0;
 }
 
 a {
@@ -98,7 +101,6 @@ footer {
 
 .cta {
   position: relative;
-  z-index: 1;
 }
 
 .cta p {
@@ -376,6 +378,126 @@ h3.out::after {
 #explore .picture .ace .slide {
   margin-inline: -19px;
   z-index: 1;
+}
+
+#video .head p {
+  display: none;
+}
+
+#video-slider {
+  width: 100%;
+}
+
+#video-tiles {
+  width: 100%;
+  border: 1px solid red;
+  position: relative;
+  aspect-ratio: 1.301 !important;
+  overflow: hidden;
+}
+
+.video {
+  position: absolute;
+  transition: width 0.5s ease, transform 0.5s ease;
+  -webkit-transition: width 0.5s ease, transform 0.5s ease;
+  -moz-transition: width 0.5s ease, transform 0.5s ease;
+  -ms-transition: width 0.5s ease, transform 0.5s ease;
+  -o-transition: width 0.5s ease, transform 0.5s ease;
+}
+
+.video .controls {
+  position: absolute;
+  bottom: 0;
+  background: var(--bg-dark);
+  color: var(--white);
+  width: 100%;
+  height: 6%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.video:not(.video-0) .controls {
+  display: none;
+}
+
+.video,
+.video video {
+  aspect-ratio: 1.77777 !important;
+}
+
+.video video {
+  width: 100%;
+}
+
+.video-0, .video-4 {
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+.video-0 {
+  z-index: 1;
+  transform: translate(0, 0);
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
+}
+
+.video-4 {
+  transform: translate(calc(100% + 40px), 0);
+  -webkit-transform: translate(calc(100% + 40px), 0);
+  -moz-transform: translate(calc(100% + 40px), 0);
+  -ms-transform: translate(calc(100% + 40px), 0);
+  -o-transform: translate(calc(100% + 40px), 0);
+}
+
+.video-1,
+.video-2,
+.video-3 {
+  top: 0;
+  left: 0;
+  width: 31.5%;
+}
+
+.video-1 {
+  transform: translate(0, calc(318% + 40px));
+  -webkit-transform: translate(0, calc(318% + 40px));
+  -moz-transform: translate(0, calc(318% + 40px));
+  -ms-transform: translate(0, calc(318% + 40px));
+  -o-transform: translate(0, calc(318% + 40px));
+}
+
+.video-2 {
+  transform: translate(calc(100% + 40px), calc(318% + 40px));
+  -webkit-transform: translate(calc(100% + 40px), calc(318% + 40px));
+  -moz-transform: translate(calc(100% + 40px), calc(318% + 40px));
+  -ms-transform: translate(calc(100% + 40px), calc(318% + 40px));
+  -o-transform: translate(calc(100% + 40px), calc(318% + 40px));
+}
+
+.video-3 {
+  transform: translate(calc(200% + 80px), calc(318% + 40px));
+  -webkit-transform: translate(calc(200% + 80px), calc(318% + 40px));
+  -moz-transform: translate(calc(200% + 80px), calc(318% + 40px));
+  -ms-transform: translate(calc(200% + 80px), calc(318% + 40px));
+  -o-transform: translate(calc(200% + 80px), calc(318% + 40px));
+}
+
+#video-navigation {}
+
+#video-navigation span {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background: gray;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+#video-navigation span.active {
+  background: black;
 }
 
 footer {
