--- a/styles/hd.css
+++ b/styles/hd.css
@@ -1,7 +1,7 @@
 /* hd.css */
 @media (min-width: 1920px) {
   .content {
-    width: 1440px;
+    max-width: 1440px;
   }
 
   .header {
@@ -23,6 +23,9 @@
     font-size: 80px;
     line-height: 90px;
     letter-spacing: 5px;
+    width: 600px;
+    position: relative;
+    z-index: 3;
   }
 
   .cta {
@@ -30,13 +33,15 @@
   }
 
   .cta p {
+    margin-top: 25px;
     font-size: 28px;
     line-height: 33px;
     letter-spacing: 2px;
+    width: 445px;
   }
 
   .cta a {
-    top: 313px;
+    margin-top: 80px;
     width: 360px;
     height: 75px;
     border-radius: 10px;
@@ -144,6 +149,29 @@
     width: 720px;
     height: 700px;
   }
+
+  #video {
+    padding-block: 75px;
+  }
+
+  #video .head p {
+    display: flex;
+    font-size: 22px;
+    line-height: 38.5px;
+    height: 90px;
+    align-items: center;
+  }
+
+  #video .head {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  #video-slider {}
+
+  #video-tiles {}
+
+  #video-navigation {}
 
   footer {
     font-size: 22px;
