feat: end videos, polish logic, style custom

--- a/styles/base.css
+++ b/styles/base.css
@@ -18,7 +18,9 @@
   --text-gold: #CAAA7D;
   --font-gold-dimmed: #7E6C51;
   --golden: #D2B183;
+  --carbon: #333333;
   --gray: #666666;
+  --silver: #C4C4C4;
 }
 
 body {
@@ -386,11 +388,11 @@ h3.out::after {
 
 #video-slider {
   width: 100%;
+  padding-top: 75px;
 }
 
 #video-tiles {
   width: 100%;
-  border: 1px solid red;
   position: relative;
   aspect-ratio: 1.301 !important;
   overflow: hidden;
@@ -403,6 +405,8 @@ h3.out::after {
   -moz-transition: width 0.5s ease, transform 0.5s ease;
   -ms-transition: width 0.5s ease, transform 0.5s ease;
   -o-transition: width 0.5s ease, transform 0.5s ease;
+  overflow: hidden;
+  cursor: pointer;
 }
 
 .video .controls {
@@ -415,10 +419,244 @@ h3.out::after {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+
+[data-action="toggle-play"] svg {
+  width: 23px;
+  height: 31px;
+}
+
+.timeline {}
+
+[data-action="mute"] svg {
+  width: 38px;
+  height: 31px;
+}
+
+.volume-indicator{}
+.volume {}
+
+[data-action="fullscreen"] svg {
+  width: 35px;
+  height: 35px;
+}
+
+[data-action="toggle-play"],
+.timeline,
+[data-action="mute"],
+.volume,
+[data-action="fullscreen"] {
+  cursor: pointer;
+}
+
+.timeline {
+  width: 65%;
+  margin-inline: 15px;
+}
+
+.volume-container {
+  display: flex;
+  align-items: center;
+  margin-inline: 15px;
+  width: 10.75%;
+  position: relative;
+}
+
+.volume {
+  width: 100%;
+}
+
+input[type="range"].volume,
+input[type="range"].timeline {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 8px;
+  background: linear-gradient(to right, var(--dark-red) 50%, var(--silver) 50%);
+  outline: none;
+  cursor: pointer;
+}
+
+input[type="range"].volume::-webkit-slider-thumb,
+input[type="range"].timeline::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 15px;
+  width: 15px;
+  background: var(--white);
+  border-radius: 50%;
+  border: none;
+}
+
+input[type="range"].volume::-moz-range-thumb,
+input[type="range"].timeline::-moz-range-thumb {
+  height: 15px;
+  width: 15px;
+  background: var(--white);
+  border-radius: 50%;
+  border: none;
+}
+
+input[type="range"].volume::-moz-range-track,
+input[type="range"].timeline::-moz-range-track {
+  height: 8px;
+  background: var(--silver);
+}
+
+input[type="range"].volume::-moz-range-progress,
+input[type="range"].timeline::-moz-range-progress {
+  height: 8px;
+  background: var(--dark-red);
+}
+
+
+.volume-indicator {
+  position: absolute;
+  top: -30px;
+  transform: translateX(-50%);
+  transition: left 0.15s ease, opacity 0.5s;
+  opacity: 0;
+  z-index: 10;
+  pointer-events: none;
+  font-size: 14px;
+  padding: 2px 6px;
+  border-radius: 4px;
+  border: 1px solid var(--silver);
+}
+
+.volume-indicator.visible {
+  opacity: 1;
+}
+
+
+[data-action="toggle-play"],
+[data-action="mute"],
+[data-action="fullscreen"] {
+  border: none;
+  background: none;
+  padding-inline: 30px;
+}
+
+
+.controls.hidden {
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  -moz-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  -o-transform: translateY(100%);
 }
 
 .video:not(.video-0) .controls {
   display: none;
+}
+
+.video-0::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 15.2777%;
+  aspect-ratio: 1;
+  background: url('/assets/icons/play.svg') no-repeat center center;
+  background-size: contain;
+  pointer-events: none;
+  opacity: 1;
+  transition: opacity 0.4s ease, transform 0.4s ease;
+  transform: translate(-50%, -50%) scale(1);
+  -webkit-transform: translate(-50%, -50%) scale(1);
+  -moz-transform: translate(-50%, -50%) scale(1);
+  -ms-transform: translate(-50%, -50%) scale(1);
+  -o-transform: translate(-50%, -50%) scale(1);
+}
+
+/* Hide when playing */
+.video-0[data-paused="false"]::after {
+  opacity: 0;
+  transform: translate(-50%, -50%) scale(3.5);
+  -webkit-transform: translate(-50%, -50%) scale(3.5);
+  -moz-transform: translate(-50%, -50%) scale(3.5);
+  -ms-transform: translate(-50%, -50%) scale(3.5);
+  -o-transform: translate(-50%, -50%) scale(3.5);
+}
+
+#video-navigation {
+  width: 200px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 40px auto 0;
+}
+
+#video-navigation span {
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+  position: relative;
+  background: none;
+}
+
+#video-navigation span::after {
+  content: "";
+  background: gray;
+  border-radius: 50%;
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: background 0.5s ease;
+  -webkit-transition: background 0.5s ease;
+  -moz-transition: background 0.5s ease;
+  -ms-transition: background 0.5s ease;
+  -o-transition: background 0.5s ease;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
+
+#video-navigation span.active::after {
+  background: var(--carbon);
+}
+
+#video-navigation span:hover::after {
+  background: var(--dark-red);
+}
+
+#video-navigation button {
+  padding: 10px;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+#video-navigation button svg {
+  width: 10px;
+  height: 12px;
+}
+
+#video-navigation button svg path {
+  transition: fill 0.5s ease;
+  -webkit-transition: fill 0.5s ease;
+  -moz-transition: fill 0.5s ease;
+  -ms-transition: fill 0.5s ease;
+  -o-transition: fill 0.5s ease;
+}
+
+#video-navigation button:hover svg path {
+  fill: var(--dark-red);
 }
 
 .video,
@@ -483,21 +721,6 @@ h3.out::after {
   -moz-transform: translate(calc(200% + 80px), calc(318% + 40px));
   -ms-transform: translate(calc(200% + 80px), calc(318% + 40px));
   -o-transform: translate(calc(200% + 80px), calc(318% + 40px));
-}
-
-#video-navigation {}
-
-#video-navigation span {
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  background: gray;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-#video-navigation span.active {
-  background: black;
 }
 
 footer {
